# aws-ml-stack

./: .cspell.json  .gitignore  README.md  Taskfile.yml  app.py  dprint.json  package-lock.json  package.json  pyproject.toml  requirements.txt
src/: __init__.py  code_web_install.sh  code_web_run.sh  create_ec2_spot_instance.py  create_snapshot.py  ec2_request.py  ec2_setup.sh  ec2_ssh_command.py  ec2_terminate.py  setup_ec2_1stage.sh  setup_ec2_2stage.sh  stacks.py  volume_attach.py  volume_delete.py
src/awscdk/: __init__.py  stack_config.py  stack_output_keys.py  stacks.py
src/internal/: datetime_encoder.py  ec2_spot_instance.py  ec2_volume.py  stack_output.py
